--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello 
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Countdown Till im 18</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<div id="countdown">
+			<div id="countdowndays" class="box"><p></p></div>
+			<div id="countdownhours" class="box"><p></p></div>
+			<div id="countdownmins" class="box"><p></p></div>
+			<div id="countdownsecs" class="box"><p></p></div>
+</div>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script><script  src="./script.js"></script>
+
+</body>
+</html>
